Fix java 11 compat